# neighbor

./: .dockerignore  .gitignore  AGENTS.md  BRANCH_CHANGES.md  Dockerfile  ECS_DEPLOYMENT.md  README.md  generate_map_from_cache.py  merge_new_orgs.py  pyproject.toml  regen_princeton_ky.py  retrieve_response.py  run-ecs-task.sh  task-definition-template.json
docs/: FULLPAGE_MAP_FEATURE.md
map_regen_outputs/buckeye_az/: 78a0c5ba-13f9-4d12-9452-6fbd66c15a8c_map_metadata.json
map_regen_outputs/eloy_az/: 2b067f98-147f-4146-9a03-ff7e3034cbed_map_metadata.json
map_regen_outputs/payette_county_id/: fa97bbb2-6215-46d8-8046-79689eeebacd_map_metadata.json
map_regen_outputs/princeton_ky/: b0e49f41-a6aa-48f1-86ac-052c9af24824_map_metadata.json
map_regen_outputs/spotsylvania_va/: 3067d04a-7120-4493-83e8-ba12e252f6e6_map_legend.json  3067d04a-7120-4493-83e8-ba12e252f6e6_map_metadata.json
src/neighbor/: README.md  __init__.py  convert_html_to_pdf.py  convert_neighbor_to_html.py  dedupe_neighbors.py  regrid_adhoc.py  run_conversion_pipeline.py  run_live_regrid.py  run_missing_batch.py  sample_neighbor.json  test_geocoding.py  test_live_regrid.py  test_marion_county.py  test_pipeline.py  webhook_manager.py  webhook_server.py
src/neighbor/agents/: neighbor_finder.py  verification_manager_neighbor.py  verification_neighbor_base.py  verification_neighbor_org.py  verification_neighbor_person.py
src/neighbor/config/: assessment_ratios.py  prompts.py  settings.py
src/neighbor/deep_research_outputs/: dr_organizations_20251106_162453_3476.json  (+913 more)
src/neighbor/engines/: base.py  (+4 more)
(+169 files in other folders)
